add search trip method @ route
